# yourscript-discordbot

./: .env.example  .gitignore  30_features_idea.md  50_features_idea.md  all_files.txt  codex_app_help.txt  codex_help.txt  codex_help2.txt  docker-compose.yml  files.txt  modified_files.txt  package-lock.json  package.json  pnpm-lock.yaml  reset_memory.ts  start.bat  test.md  tsconfig.json  tsup.config.ts
backend/: Cargo.toml  Dockerfile
backend/src/: config.rs  error.rs  main.rs  state.rs
backend/src/auth/: discord_oauth.rs  middleware.rs  mod.rs
backend/src/db/: pool.rs
backend/src/db/migrations/: 001_initial.sql
backend/src/mcp/: server.rs
backend/src/mcp/tools/: config.rs  messages.rs  mod.rs  moderation.rs  tickets.rs
backend/src/models/: auto_role.rs  bot_config.rs  dashboard_log.rs  embed_template.rs  giveaway.rs  guild.rs  mod.rs  reaction_role.rs  reminder.rs  session.rs  suggestion.rs  temp_punishment.rs  ticket.rs  transcript.rs  user.rs  warn.rs
backend/src/routes/: auth.rs  auto_roles.rs  bot_actions.rs  config.rs  embeds.rs  giveaways.rs  guilds.rs  leaderboard.rs  logs.rs  mod.rs  moderation.rs  reaction_roles.rs  suggestions.rs  tickets.rs  transcripts.rs
backend/src/services/: giveaway.rs  leveling.rs  mod.rs  moderation.rs  scheduler.rs  suggestion.rs  ticket.rs  transcript.rs
backend/src/ws/: handlers.rs
bot/: Dockerfile  package.json  tsconfig.json
dashboard/: Dockerfile  index.html  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts
prisma/: schema.prisma
pterodactyl/: INSTALL.md  egg-yorkdev-bot.json
(+246 files in other folders)
